proxy pass for /gpafana route

--- a/load_balance/.nginx/nginx.conf
+++ b/load_balance/.nginx/nginx.conf
@@ -14,6 +14,10 @@ http {
     server {
         listen 80;
         
+        location /grafana {
+            proxy_pass grafana:3000;
+        }
+
         location / {
             proxy_pass http://loadbalancer;
         }
